[gd_scene load_steps=7 format=3 uid="uid://b0qrt2xcl1tn3"]

[ext_resource type="Script" path="res://scene/game/entity/enermy/enermy.gd" id="1_6nc2l"]
[ext_resource type="Script" path="res://component/attack_component.gd" id="3_28745"]
[ext_resource type="Texture2D" uid="uid://c1lyivbq3pegh" path="res://asset/image/test_sprite_sheet.png" id="3_a2fix"]
[ext_resource type="Script" path="res://component/health_component.gd" id="4_g2lb2"]
[ext_resource type="Theme" uid="uid://oagauisywtfc" path="res://theme/ui_label_theme.tres" id="5_ui6t5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ivpil"]
atlas = ExtResource("3_a2fix")
region = Rect2(0, 110, 128, 110)

[node name="EnermyA" type="Node2D"]
script = ExtResource("1_6nc2l")
loot_energy = 1
revive_step_gap = 3
type = 20

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("3_28745")
base_attack = 2

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_g2lb2")

[node name="Visual" type="Node2D" parent="."]

[node name="DeadBody" type="Sprite2D" parent="Visual"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 0.486275)
scale = Vector2(0.8, 0.8)
texture = SubResource("AtlasTexture_ivpil")

[node name="Sprite2D" type="Sprite2D" parent="Visual"]
unique_name_in_owner = true
scale = Vector2(0.8, 0.8)
texture = SubResource("AtlasTexture_ivpil")

[node name="CountdownLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.68101, 0.68101, 0.68101, 0.733333)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 15.0
offset_bottom = 29.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("5_ui6t5")
theme_override_colors/font_color = Color(0.619489, 0.619489, 0.619489, 1)
theme_override_font_sizes/font_size = 24
text = "1"

[node name="StatusLabel" type="Control" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HPLabel" type="Label" parent="StatusLabel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -43.0
offset_right = 23.0
offset_bottom = -6.0
grow_vertical = 0
theme = ExtResource("5_ui6t5")
theme_override_font_sizes/font_size = 24
text = "1"

[node name="AtkLabel" type="Label" parent="StatusLabel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -43.0
offset_right = -7.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("5_ui6t5")
theme_override_colors/font_color = Color(0.607843, 0.717647, 0.941176, 1)
theme_override_font_sizes/font_size = 24
text = "2"
